# polintel-feeds

./: .gitignore  README.md  SOURCES.md  index.html  pyproject.toml  requirements.txt
data/: jobs.db  url_audit.txt
docs/: ats-part1-verification.md
feeds/: alerts.json  benelux-national-politics.xml  benelux-political-parties.xml  benelux-think-tanks.xml  brussels-eu-affairs.xml  brussels-eu-institutions.xml  brussels-fellowships.xml  brussels-international-orgs.xml  brussels-ngos.xml  brussels-think-tanks.xml  cee-national-politics.xml  cee-think-tanks.xml  dach-foundations.xml  dach-national-politics.xml  dach-political-parties.xml  dach-public-affairs.xml  dach-think-tanks.xml  dach-trade-associations.xml  index.html  internship_graduate-general.xml  internship_graduate-international-orgs.xml  internship_graduate-public-affairs.xml  internship_graduate-research.xml  internship_graduate-us-campaigns.xml  internship_graduate-us-congress.xml  internship_graduate-us-fellowships.xml  nordics-national-politics.xml  nordics-think-tanks.xml  pan-eu-eu-affairs.xml  pan-eu-international-orgs.xml  southern-national-politics.xml  southern-political-parties.xml  southern-public-affairs.xml  southern-think-tanks.xml  southern-trade-associations.xml  status.json  uk-fellowships.xml  uk-general.xml  uk-government.xml  uk-ngos.xml  (+11 more)
src/: cli.py  pipeline.py
tests/: test_ats_detector.py  test_ats_extractors.py  test_feed_transport.py  test_generic_parsing.py  test_jobs_ac_uk_scraper.py  test_lobbyingjobs_scraper.py  test_location_extractor.py  test_readability_enricher.py  (+4 more)
(+85 files in other folders)
